oss/tui-markdown/src/renderer/snapshots/tui_markdown__renderer__blockquote__tests__gfm_alerts__alert_TIP.snap
---
source: tui-markdown/src/renderer/blockquote.rs
expression: |-
  from_str(&formatdoc!
  {"
                      > [!{marker}]
                      > Body
                  "})
---
Text::from_iter([
    Line::from_iter([
        Span::from(">"),
        Span::from(" "),
        Span::from("💡 Tip").green().bold(),
    ]).green(),
    Line::from_iter([
        Span::from(">"),
        Span::from(" "),
        Span::from("Body"),
    ]).green(),
])
